--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-# Numerous always-ignore extensions
 *.diff
 *.err
 *.orig
@@ -10,8 +9,8 @@
 *~
 *.sass-cache
 
-# OS or Editor folders
 .DS_Store
+.envrc
 .cache
 .project
 .settings
@@ -19,16 +18,9 @@
 nbproject
 Thumbs.db
 
-# NPM packages folder.
 node_modules/
 
-# Brunch folder for temporary files.
+.tmp
 tmp/
 
-# Brunch output folder.
-public/
-
-# Bower stuff.
-bower_components/
-
-.envrc
+dist/
