--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
     "gulp-htmlmin": "^3.0.0",
     "gulp-if": "^2.0.2",
     "gulp-imagemin": "^3.0.1",
+    "gulp-less": "^3.3.0",
     "gulp-load-plugins": "^1.2.4",
     "gulp-plumber": "^1.0.1",
+    "gulp-regex-replace": "^0.2.3",
     "gulp-size": "^2.1.0",
     "gulp-sourcemaps": "^2.2.0",
     "gulp-uglify": "^2.0.0",
